# Real-Time-Edge-Detection-Viewer

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgedetect/: CameraController.kt  GLSurfaceRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gl/shaders/: fragment.glsl  vertex.glsl
jni/src/: native-lib.cpp
web/: package.json  tsconfig.json
web/src/: index.html  index.ts
